--- a/src/styles.css
+++ b/src/styles.css
@@ -16,13 +16,13 @@ body {
 }
 
 nav {
-  background-color: blue;
+  background-color: #4056A1;
   grid-area: nav;
   height: 100px;
 }
 
 header {
-  background-color: red;
+  background-color: #F13C20;
   grid-area: sidebar;
 }
 
@@ -31,10 +31,10 @@ output {
   grid-gap: 5px;  
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-rows: repeat(2, 300px);
-  background-color: green;
+  background-color: #EFE2BA;
   grid-area: output;
 }
 
 div {
-
+  background-color: #C5CBE3;
 }
