--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,7 @@ h3 {
   font-weight: 700;
   font-size: 18px;
   padding: 10px;
+  border-top: black 2px solid;
 }
 
 .header__h3 {
@@ -95,17 +96,29 @@ h3 {
 
 output {
   display: grid;  
-  grid-gap: 5px;  
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-template-rows: repeat(2, 300px);
-  background-color: #5D5C61;
+  /*grid-gap: 5px;  */
+  /*grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));*/
+  /*grid-template-rows: repeat(2, 300px);*/
+  background-color: #FFFFFF;
   grid-area: output;
+  padding: 10px;
 }
 
-section {
-  background-color: #B1A296;
+.section--hydration {
+  height: 300px;
+  width: 300px;
 }
 
-canvas {
-  padding: 5px 35px 65px 35px;
+h4 {
+  font-size: 24px;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+}
+
+.canvas--hydration {
+  /*background-color: #DEB887;*/
+  padding: 10px;
+  /*padding: 5px 35px 65px 35px;*/
+/*  height: 200px;
+  width: 200px;*/
 }
