--- a/src/styles.css
+++ b/src/styles.css
@@ -86,13 +86,15 @@ h3 {
   font-weight: 700;
   font-size: 18px;
   padding: 10px;
-  border-top: black 2px solid;
+  border-top: #557A95 2px solid;
 }
 
 .header__h3 {
   font-size: 14px;
   font-weight: 400;
 }
+
+/*OUTPUT*/
 
 output {
   display: grid;  
@@ -113,12 +115,16 @@ h4 {
   font-size: 24px;
   margin-block-start: 0px;
   margin-block-end: 0px;
+  padding: 10px;
 }
 
 .canvas--hydration {
-  /*background-color: #DEB887;*/
   padding: 10px;
-  /*padding: 5px 35px 65px 35px;*/
-/*  height: 200px;
-  width: 200px;*/
 }
+
+table, th, td {
+  border: 1px solid black;
+  padding: 5px;
+}
+
+
