--- a/src/styles.css
+++ b/src/styles.css
@@ -128,6 +128,8 @@ h4 {
   margin-bottom: 20px;
   min-height: 200px;
   min-width: 400px;
+  max-height: 250px;
+  max-width: 500px;
 }
 
 .canvas--hydration {
@@ -145,6 +147,8 @@ h4 {
   padding: 5px;
   min-height: 200px;
   min-width: 400px;
+  max-height: 250px;
+  max-width: 500px;
 
 }
 
@@ -164,6 +168,8 @@ td, th {
 .output__table {
   width: 95%;
   margin: auto;
+  max-height: 250px;
+  max-width: 500px;
 }
 
 
