Add positive and negative feedback for step goal

--- a/src/styles.css
+++ b/src/styles.css
@@ -93,6 +93,16 @@ h3 {
   font-weight: 400;
 }
 
+h5 {
+  color: black;
+  /*font-family: cursive;*/
+  text-align: center;
+  font-size: 16px;
+  margin-block-start: 0px;
+  border-bottom: #557A95 2px solid;
+  padding-bottom: 30px;
+}
+
 /*OUTPUT*/
 
 output {
@@ -136,14 +146,12 @@ h4 {
 }
 
 .section--activity--table {
-  display: flex;
 }
 
 .section--activity--charts {
   height: 200px;
   width: 90%;
   margin: auto;
-  margin-top: 10px;
   padding: 5px;
   min-height: 200px;
   min-width: 400px;
@@ -170,6 +178,5 @@ td, th {
   margin: auto;
   max-height: 250px;
   max-width: 500px;
+  margin-bottom: 20px;
 }
-
-
