Finish dashboard charts

--- a/src/styles.css
+++ b/src/styles.css
@@ -142,6 +142,17 @@ h4 {
   max-width: 500px;
 }
 
+.section--sleep {
+  width: 90%;
+  margin: auto;
+  padding: 5px;
+/*  margin-bottom: 20px;
+  min-height: 200px;
+  min-width: 400px;
+  max-height: 250px;
+  max-width: 500px;*/
+}
+
 .canvas--hydration {
 }
 
