--- a/src/styles.css
+++ b/src/styles.css
@@ -125,13 +125,12 @@ h4 {
   font-size: 24px;
   margin-block-start: 0px;
   margin-block-end: 0px;
-  padding: 10px;
-/*  color: black;
-  text-shadow: -1px 0 #557A95, 0 1px #557A95, 1px 0 #557A95, 0 -1px #557A95;*/
+  padding: 15px;
+  text-align: center;
 }
 
 .section--hydration {
-  height: 200px;
+  /*height: 200px;*/
   width: 90%;
   margin: auto;
   padding: 5px;
@@ -139,40 +138,9 @@ h4 {
   min-height: 200px;
   min-width: 400px;
   max-height: 250px;
-  max-width: 500px;
+  max-width: 550px;
 }
 
-.section--sleep {
-  width: 90%;
-  margin: auto;
-  padding: 5px;
-/*  margin-bottom: 20px;
-  min-height: 200px;
-  min-width: 400px;
-  max-height: 250px;
-  max-width: 500px;*/
-}
-
-.canvas--hydration {
-}
-
-.section--activity--table {
-}
-
-.section--activity--charts {
-  height: 200px;
-  width: 90%;
-  margin: auto;
-  padding: 5px;
-  min-height: 200px;
-  min-width: 400px;
-  max-height: 250px;
-  max-width: 500px;
-
-}
-
-.canvas--activity {
-}
 
 table, th, td {
   border: 1px solid black;
@@ -188,6 +156,50 @@ td, th {
   width: 95%;
   margin: auto;
   max-height: 250px;
-  max-width: 500px;
+  max-width: 550px;
   margin-bottom: 20px;
 }
+
+.section--activity--charts {
+  height: 200px;
+  width: 90%;
+  margin: auto;
+  padding: 5px;
+  min-height: 200px;
+  min-width: 400px;
+  max-height: 250px;
+  max-width: 550px;
+}
+
+.section--sleep {
+  /*height: 200px;*/
+  width: 90%;
+  margin: auto;
+
+  padding: 5px;
+  /*min-height: 200px;*/
+  min-width: 400px;
+  /*max-height: 250px;*/
+  max-width: 550px;
+}
+
+.section--step-challenge {
+  width: 90%;
+  margin: auto;
+  padding: 5px;
+  /*min-height: 200px;*/
+  min-width: 400px;
+  /*max-height: 250px;*/
+  max-width: 550px;
+}
+
+.canvas--hydration {
+}
+
+.section--activity--table {
+}
+
+
+.canvas--activity {
+}
+
