--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
 
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
@@ -11,7 +13,7 @@ body {
   "sidebar output"
   "sidebar output";
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 10fr;
+  /*grid-template-rows: 1fr 10fr;*/
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -24,6 +26,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0px 50px;
+  height: 100px;
 }
 
 h1 {
@@ -42,7 +45,7 @@ h1 {
 
 .nav__img {
   height: 50px;
-  margin-top: 45px;
+  margin-top: 10px;
 }
 
 
@@ -93,6 +96,17 @@ h3 {
   font-weight: 400;
 }
 
+.header__section--chart {
+  width: 90%;
+  margin: auto;
+  padding: 5px;
+  /*margin-bottom: 20px;*/
+  /*min-height: 200px;*/
+  min-width: 300px;
+  /*max-height: 400px;*/
+  max-width: 500px;
+}
+
 h5 {
   color: black;
   text-align: center;
@@ -132,7 +146,6 @@ h4 {
   width: 90%;
   margin: auto;
   padding: 5px;
-  margin-bottom: 20px;
   min-height: 200px;
   min-width: 400px;
   max-height: 250px;
@@ -159,13 +172,13 @@ td, th {
 }
 
 .section--activity--charts {
-  height: 200px;
+  /*height: 200px;*/
   width: 90%;
   margin: auto;
   padding: 5px;
   min-height: 200px;
   min-width: 400px;
-  max-height: 250px;
+  /*max-height: 250px;*/
   max-width: 550px;
 }
 
@@ -183,4 +196,55 @@ td, th {
   padding: 5px;
   min-width: 400px;
   max-width: 550px;
+}
+
+@media screen and (max-width: 1150px) {
+
+  output {
+    flex-direction: column;
+  }
+
+  .article--column1 {
+    border: none;
+    width: 100%;
+  }
+
+  .article--column2 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 825px) {
+
+  h2 {
+    font-size: 24px;
+  }
+
+  #header__h2--name {
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 740px) {
+
+  body {
+    display: block;
+  }
+
+  nav {
+    flex-direction: column;
+  }
+
+  h5 {
+    border: none;
+    padding-bottom: 10px;
+  }
+  
+  h3 {
+    text-align: center;
+  }
+
+  li {
+    text-align: center;
+  }
 }
